--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <canvas id="canvas"></canvas>
 
   <script src="./moving_object.js"></script>
-  <script src="./asteroids.js"></script>
+  <script src="./asteroid.js"></script>
   <script src="./ship.js"></script>
   <script src="./game.js"></script>
 </body>
