Add some styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Asteroids</title>
   
+  <link rel="stylesheet" href="./styles.css" media="screen">
+  
   <script src="./utilities.js"></script>
   <script src="./moving_object.js"></script>
   <script src="./asteroid.js"></script>
