--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="./utilities.js"></script>
   <script src="./moving_object.js"></script>
   <script src="./asteroid.js"></script>
+  <script src="./bullet.js"></script>
   <script src="./ship.js"></script>
   <script src="./game.js"></script>
 </head>
