--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <title>Asteroids</title>
   
-  <link rel="stylesheet" href="./styles.css" media="screen">
+  <link rel="stylesheet" href="./css/styles.css" media="screen">
   
   <script src="./lib/keymaster.js"></script>
   
-  <script src="./utilities.js"></script>
-  <script src="./moving_object.js"></script>
-  <script src="./asteroid.js"></script>
-  <script src="./bullet.js"></script>
-  <script src="./ship.js"></script>
-  <script src="./game.js"></script>
+  <script src="./js/utilities.js"></script>
+  <script src="./js/moving_object.js"></script>
+  <script src="./js/asteroid.js"></script>
+  <script src="./js/bullet.js"></script>
+  <script src="./js/ship.js"></script>
+  <script src="./js/game.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="700" height="400"></canvas>
